# tgraph-gtk

./: INSTALL  INSTALL.md  Makefile  README  README.md  pyproject.toml  tgraph.py  tgraph.txt
src/: tgraph.py
tests/: test_tgraph.py
